welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:34: error: reassignment to val
while (estSurBiscuit = false )
                     ^